Fixing z-index problem on modal

--- a/app/assets/stylesheets/shared/_modal.sass
+++ b/app/assets/stylesheets/shared/_modal.sass
@@ -3,4 +3,5 @@
     width: 40%
     margin-left: -20%
     padding-bottom: 0
-
+    a.button
+      z-index: 99
